Ya no es tan secreto

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 		<h1>HOLA</h1>
 		<h2>Tengo un vagabundo a mi lado -.-</h2>
 		<p>Daniela come mocos x2</p>
+		<p>ya no es tan secreto</p>
 	</body>
 </html>
